<resources>
    <string name="app_name">Robot android</string>
    <string name="title_activity_menu_demarrage">Menu_Demarrage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gamme">Gamme</string>
    <string name="connexion">Connexion</string>
    <string name="seConnecter">Se connecter</string>
    <string name="identifiant">Identifiant</string>
    <string name="retour">retour</string>
    <string name="password">Mot de passe</string>
    <string name="labelSpinnerListeAppareil">Liste des appareils wifi :</string>
    <string name="envoieMessage">Envoyer un message sur le réseau :</string>
    <string name="hintEnvoieMessage">Ecrivez votre message ici</string>
    <string name="envoieMessageBtn">Envoyer</string>
    <string name="etatWifi">état du Wifi :</string>
    <string name="password_hint">Mot de passe</string>
    <string name="robot_hint">Adresse IP du robot</string>
    <string name="panne">Panne</string>
    <string name="automatique">Automatique</string>
    <string name="manuel">Manuel</string>
    <string name="grab">Attraper</string>
    <string name="turn">Tourner</string>
    <string name="wait">Attendre</string>
    <string name="typeAction">Action à réaliser</string>
    <string name="turnRight">Tourner à droite</string>
    <string name="turnLeft">Tourner à gauche</string>
    <string name="drop">Déposer</string>
    <string name="repair">Réparation</string>
    <string name="newGamme">Nouvelle gamme</string>
    <string name="newOperation">Nouvelle opération</string>
    <string name="newTache">Nouvelle Tâche</string>
    <string name="listGammes">Liste des gammes</string>
    <string name="deconnexion">Deconnexion</string>

    <!-- Dropdown moteurs de l'écran EditTache -->
    <string-array name="listeMoteurs">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>


</resources>